feat: initial iaptic implementation
- Add iaptic integration
- Add restore purchases functionality
- Add config-example.ts template
- Exclude sensitive config.ts from git

--- a/app.json
+++ b/app.json
@@ -1,4 +1,11 @@
 {
   "name": "MyReactNativeApp",
-  "displayName": "MyReactNativeApp"
+  "displayName": "MyReactNativeApp",
+  "expo": {
+    "plugins": ["react-native-iap"]
+  },
+  "ios": {
+    "bundleIdentifier": "cc.fovea.subsdemo"
+  }
 }
+
