--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,32 +77,67 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.myreactnativeapp"
+    namespace "cc.fovea.purchase.demo"
     defaultConfig {
-        applicationId "com.myreactnativeapp"
+        applicationId "cc.fovea.purchase.demo.nc"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 10006
         versionName "1.0"
-    }
-    signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+        
+        missingDimensionStrategy 'store', 'play'
+        
+        // Add C++ standard configuration
+        externalNativeBuild {
+            cmake {
+                arguments "-DANDROID_STL=c++_shared", "-DCMAKE_CXX_STANDARD=20", "-DCMAKE_CXX_STANDARD_REQUIRED=ON"
+            }
         }
     }
+
+    signingConfigs {
+        debug {
+            storeFile file('android-release.keystore')
+            storePassword 'ispqom3pm'
+            keyAlias 'fovea'
+            keyPassword 'ispqom3pm'
+        }
+        release {
+            storeFile file('android-release.keystore')
+            storePassword System.getenv('ispqom3pm')
+            keyAlias System.getenv('fovea')
+            keyPassword System.getenv('ispqom3pm')
+        }
+    }
+
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+        }
+    }
+
+    flavorDimensions "store"
+    productFlavors {
+        play {
+            dimension "store"
+            setDefault true
+            matchingFallbacks = ['play', 'debug']
+        }
+    }
+
+    variantFilter { variant ->
+        def buildType = variant.buildType.name
+        def flavor = variant.flavors[0].name
+        
+        if (buildType == 'debug' && flavor == 'play') {
+            variant.setIgnore(false)
+        } else {
+            variant.setIgnore(true)
         }
     }
 }
@@ -110,6 +145,9 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion")
+    implementation("androidx.core:core-ktx:1.9.0")
+    implementation("com.android.billingclient:billing:6.1.0")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
