--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-iap": "^12.16.0",
+    "react-native-iaptic": "file:../react-native-iaptic",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0"
   },
@@ -40,5 +41,10 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "resolutions": {
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "@types/react": "18.3.1"
   }
 }
