--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-iap": "^12.16.0",
-    "react-native-iaptic": "file:../react-native-iaptic",
+    "react-native-iaptic": "^1.0.1",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0"
   },
